--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-YOU'RE AT THE WRONG PLACE.
-THERE'S NOTHING HERE.
-GO HOME.
+<!DOCTYPE html>
+
+<html>
+
+<p> YOU'RE AT THE WRONG PLACE. </p>
+
+<p> THERE'S NOTHING HERE. </p>
+
+<p> GO HOME. </p>
