--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
+
 <html>
+  <body>
+      <p> YOU'RE AT THE WRONG PLACE. </p>
 
-<p> YOU'RE AT THE WRONG PLACE. </p>
+      <p> THERE'S NOTHING HERE. </p>
 
-<p> THERE'S NOTHING HERE. </p>
-
-<p> GO HOME. </p>
+      <p> GO HOME. </p>
+  </body>
+</html>
