--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
       <p> THERE'S NOTHING HERE. </p>
 
       <p> GO HOME. </p>
+
+      <a href="https://soundcloud.com/esther-x-615263024">
+      Seriously.
+      </a>
+
   </body>
 </html>
